--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"gulp-clean-css": "^4.2.0",
 		"gulp-concat": "^2.6.1",
 		"gulp-copy": "^4.0.1",
+		"gulp-ext-replace": "^0.3.0",
 		"gulp-imagemin": "^6.1.0",
 		"gulp-newer": "^1.4.0",
 		"gulp-plumber": "^1.2.1",
@@ -29,6 +30,7 @@
 		"gulp.spritesmith": "^6.10.1",
 		"imagemin-jpeg-recompress": "^6.0.0",
 		"imagemin-pngquant": "^8.0.0",
+		"imagemin-webp": "^5.1.0",
 		"npm-check-updates": "^3.1.21"
 	},
 	"dependencies": {
