--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Start HTML Template (gulp 4)",
 	"main": "gulpfile.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build": "gulp build",
+		"start": "gulp"
 	},
 	"author": "Ihar",
 	"license": "ISC",
