--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"npm-check-updates": "^3.1.21"
 	},
 	"dependencies": {
+		"@fancyapps/fancybox": "^3.5.7",
 		"jquery": "^3.4.1",
 		"magnific-popup": "^1.1.0",
 		"slick-carousel": "^1.8.1"
